--- a/apps/assembly-ui/package.json
+++ b/apps/assembly-ui/package.json
@@ -47,6 +47,8 @@
     "react-player": "^2.13.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
+    "remark-flexible-paragraphs": "^1.0.1",
+    "remark-gfm": "^3.0.1",
     "serialize-javascript": "^6.0.1",
     "serve-favicon": "^2.5.0",
     "serve-static": "~1.14.2",
