feat(tracking): MP-3751 new tracking event

--- a/apps/assembly-ui/.env.dist
+++ b/apps/assembly-ui/.env.dist
@@ -28,14 +28,14 @@ ASSEMBLY_URL_SERVER_SIDE=https://assembly.preprod.makeorg.tech
 
 
 # Mixpanel
-MIXPANEL_TOKEN=
+MIXPANEL_TOKEN=496b3fdae1ecf1dfaca4d71017cc0f16
 
 # Facebook
 FB_PIXEL_ID=3668534183427105
 FB_CONVERSION_TOKEN=
 
 # Twitter
-TW_PIXEL_ID=
+TW_PIXEL_ID=oj2o3
 TW_API_KEY=
 TW_API_SECRET=
 TW_ACCESS_TOKEN=
