--- a/apps/assembly-ui/.env.test
+++ b/apps/assembly-ui/.env.test
@@ -2,10 +2,10 @@ PORT=9009
 CONTENT_URL_SERVER_SIDE=http://localhost:9001
 ASSEMBLY_URL_SERVER_SIDE=""
 FRONT_URL=http://localhost:9009
-MIXPANEL_TOKEN=""
-COOKIE_FIRST_TOKEN=""
-FB_PIXEL_ID=''
-FB_CONVERSION_TOKEN=''
+MIXPANEL_TOKEN=
+COOKIE_FIRST_TOKEN=
+FB_PIXEL_ID=
+FB_CONVERSION_TOKEN=
 
 CORE_API_URL_CLIENT_SIDE=
 CORE_API_URL_SERVER_SIDE=
