--- a/package/tracking/package.json
+++ b/package/tracking/package.json
@@ -10,7 +10,8 @@
     "@make.org/utils": "0.1.0",
     "axios": "~0.26.1",
     "axios-retry": "~3.2.6",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
@@ -19,7 +20,12 @@
     "@babel/preset-typescript": "^7.22.5",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7.9.2",
-    "@types/uuid": "^8.3.4"
+    "@types/diff": "^5.0.9",
+    "@types/js-yaml": "^4",
+    "@types/uuid": "^8.3.4",
+    "@types/yargs": "^17.0.32",
+    "diff": "^5.2.0",
+    "js-yaml": "^4.1.0"
   },
   "scripts": {
     "build": "babel . --out-dir dist --extensions '.ts' --delete-dir-on-start"
