fix(assembly-ui): update session and visitor state on each consent change
and Use key for name event

--- a/apps/assembly-ui/trackingConfiguration.yaml
+++ b/apps/assembly-ui/trackingConfiguration.yaml
@@ -3,8 +3,8 @@
 #  parameters: []
 
 TWITTER_MAPPING:
-  DISPLAY-PAGE: "ojv3t"
-  ACTION-MAIN: "ok9jh"
+  display-page: "ojv3t"
+  action-main: "ok9jh"
 
 RECIPIENTS:
   facebook: ["acquisition"]
