--- a/apps/assembly-ui/.env.local
+++ b/apps/assembly-ui/.env.local
@@ -8,14 +8,14 @@ USE_LOCAL_PROXY=true
 PORT=3000
 
 # Front url
-FRONT_URL=https://localhost:3000
+FRONT_URL=https://local.makeorg.tech:3000
 
 # Cookie First API Token
 COOKIE_FIRST_TOKEN=
 
 
 # Core API url client side
-CORE_API_URL_CLIENT_SIDE=https://localhost:3000/backend
+CORE_API_URL_CLIENT_SIDE=https://local.makeorg.tech:3000/backend
 
 # Core API URL server side
 CORE_API_URL_SERVER_SIDE=https://api.preprod.makeorg.tech
@@ -40,4 +40,3 @@ TW_API_KEY=
 TW_API_SECRET=
 TW_ACCESS_TOKEN=
 TW_TOKEN_SECRET=
-
