chore(assembly-ui): clarify env dist file

--- a/apps/assembly-ui/.env.dist
+++ b/apps/assembly-ui/.env.dist
@@ -1,42 +1,41 @@
-# Use local certificates. Only for local env. 
-USE_LOCAL_CERTS=true
+# Commented values are default.
+# Uncomment if you want to specify any value.
 
-# Activate Make API proxy (see apps/assembly-ui/server/index.ts). Only for local env. 
-USE_LOCAL_PROXY=true
+# Use local certificates. Only for local env.
+# USE_LOCAL_CERTS=true
 
-# PORT
+# Activate Make API proxy (see apps/assembly-ui/server/index.ts). Only for local env.
+# USE_LOCAL_PROXY=true
+
+# Listening port (no needed at runtime as already set by Dockerfile at build time)
 PORT=3000
 
-# Front url
+# Front url (base url)
 FRONT_URL=https://local.makeorg.tech:3000
 
-# Cookie First API Token
-COOKIE_FIRST_TOKEN=
+# Cookie First API Token (provide to enable)
+# COOKIE_FIRST_TOKEN=
 
-
-# Core API url client side
+# Core service endpoints
 CORE_API_URL_CLIENT_SIDE=https://local.makeorg.tech:3000/backend
-
-# Core API URL server side
 CORE_API_URL_SERVER_SIDE=https://api.preprod.makeorg.tech
 
-# Content API url
+# Content service endpoint
 CONTENT_URL_SERVER_SIDE=https://content.preprod.makeorg.tech
 
-# Assembly API url
+# Assembly service endpoint
 ASSEMBLY_URL_SERVER_SIDE=https://assembly.preprod.makeorg.tech
 
+# Mixpanel (provide to enable)
+# MIXPANEL_TOKEN=
 
-# Mixpanel
-MIXPANEL_TOKEN=496b3fdae1ecf1dfaca4d71017cc0f16
+# Facebook (provide to enable)
+# FB_PIXEL_ID=
+# FB_CONVERSION_TOKEN=
 
-# Facebook
-FB_PIXEL_ID=3668534183427105
-FB_CONVERSION_TOKEN=
-
-# Twitter
-TW_PIXEL_ID=oj2o3
-TW_API_KEY=
-TW_API_SECRET=
-TW_ACCESS_TOKEN=
-TW_TOKEN_SECRET=
+# Twitter (provide to enable)
+# TW_PIXEL_ID=
+# TW_API_KEY=
+# TW_API_SECRET=
+# TW_ACCESS_TOKEN=
+# TW_TOKEN_SECRET=
